<resources>
    <string name="app_name">Math</string>
    <string name="belajar_matematika">Belajar Matematika</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kalkulator">Kalkulator</string>
    <string name="tes">Tes</string>
    <string name="materi">Materi</string>
    <string name="bank_soal">Bank Soal</string>
    <string name="profil">Profil</string>
    <string name="memory_clear">MC</string>
    <string name="memory_recall">MR</string>
    <string name="memory_add">M+</string>
    <string name="memory_subtract">M-</string>
    <string name="memory_store">MS</string>

    <string name="percentage">%</string>
    <string name="root">√</string>
    <string name="square">x²</string>
    <string name="fraction">⅟x</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="backspace">⌫</string>
    <string name="division">÷</string>
    <string name="plus_minus">±</string>
    <string name="comma">,</string>
    <string name="equal">＝</string>
    <string name="addition">+</string>
    <string name="subtraction">−</string>
    <string name="multiplication">×</string>

    <string name="value_9">9</string>
    <string name="value_8">8</string>
    <string name="value_7">7</string>
    <string name="value_6">6</string>
    <string name="value_5">5</string>
    <string name="value_4">4</string>
    <string name="value_3">3</string>
    <string name="value_2">2</string>
    <string name="value_1">1</string>
    <string name="value_0">0</string>

    <string name="menu_item_history">Riwayat</string>

    <string name="history">Riwayat: </string>
    <string name="clear_history">Hapus Riwayat</string>
    <string name="history_result">"Riwayat Hasil: "</string>
    <string name="no_history">"Tidak ada riwayat."</string>
    <string name="history_cleared">Riwayat dihapus</string>

    <string name="memory_cleared_toast">Memori dihapus</string>
    <string name="memory_recalled_toast">Memanggil memori</string>
    <string name="memory_added_toast">"Memori ditambahkan: "</string>
    <string name="memory_subtracted_toast">"Memory subtracted: "</string>
    <string name="memory_stored_toast">"Memory tersimpan: "</string>
    <string name="todo">TODO</string>
    <string name="mulai_belajar">Mulai Belajar</string>
    <string name="judul_materi">Judul Materi</string>
    <string name="deskripsi_materi">Deskripsi Materi</string>
    <string name="ketik_judul_materi">Ketik Judul Materi</string>
    <string name="pretest">Pretest</string>
    <string name="post_test">Post Test</string>
    <string name="pilih_tahap_test_kamu">Pilih tahap test kamu!</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="anwar_fauzan_s_pd">Anwar Fauzan, S.Pd</string>
    <string name="s1_pendidikan_matematika_univeritas_islam_negeri_raden_intan_lampung">S1 Pendidikan Matematika Univeritas Islam Negeri Raden Intan Lampung</string>
    <string name="lahir_di_kotabumi_lampung_utara_pada_tanggal_6_februari_1997_adalah_mahasiswa_universitas_islam_negeri_raden_intan_lampung_fakultas_tarbiyah_dan_keguruan_jurusan_pendidikan_matematika_anak_pertama_dari_3_bersaudara_ini_merupakan_lulusan_dari_man_1_lampung_utara_pernah_menjabat_sebagai_pradana_putra_pramuka_tahun_2014_kepala_humas_osis_kepala_humas_rohis_man_1_lampung_utara">Lahir di Kotabumi Lampung Utara pada tanggal 6 februari 1997 adalah mahasiswa Universitas Islam Negeri Raden Intan Lampung Fakultas Tarbiyah dan Keguruan Jurusan Pendidikan Matematika. Anak Pertama dari 3 bersaudara ini merupakan lulusan dari MAN 1 Lampung Utara. Pernah menjabat sebagai Pradana Putra Pramuka tahun 2014, Kepala Humas OSIS, Kepala Humas ROHIS MAN 1 Lampung Utara.</string>
    <string name="daftar_materi">Daftar Materi</string>
    <string name="_9_2_1_10">9 + 2 - 1 × 10 =</string>
    <string name="_100">100</string>
</resources>