<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfilFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="180dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/bg_profil" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/tentang_aplikasi"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/foto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="75dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_profil"
                android:contentDescription="@string/todo"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/anwar_fauzan_s_pd"
            android:textColor="@color/purple_700"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/foto" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:paddingHorizontal="24dp"
            android:text="@string/s1_pendidikan_matematika_univeritas_islam_negeri_raden_intan_lampung"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:paddingHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/lahir_di_kotabumi_lampung_utara_pada_tanggal_6_februari_1997_adalah_mahasiswa_universitas_islam_negeri_raden_intan_lampung_fakultas_tarbiyah_dan_keguruan_jurusan_pendidikan_matematika_anak_pertama_dari_3_bersaudara_ini_merupakan_lulusan_dari_man_1_lampung_utara_pernah_menjabat_sebagai_pradana_putra_pramuka_tahun_2014_kepala_humas_osis_kepala_humas_rohis_man_1_lampung_utara"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>